src/style.less
@import "../vendor/bootstrap/less/variables.less";
@import "../vendor/animate.css/animate.css";

@gray-lightest: lighten(@gray-base, 97.25%);
@border-color: darken(@gray-lightest, 6.5%);

.logo {
  max-width: 90%;
  margin: 20px;

  .navbar-brand & {
    display: inline;
    margin: 2px;
    width: 44px;
  }
}

@fadeInSpeed: 500ms;
@fadeOutSpeed: 300ms;

.snippetEnablerList {
  @snippetEnablerHeight: 35px;

  min-height: @snippetEnablerHeight;

  .dndDraggingSource {
    display: none;
  }

  .dndPlaceholder {
    min-height: @snippetEnablerHeight;
    background-color: @border-color;
    border-radius: .25em;
  }

  li {
    padding: 5px 0;

    &.ng-enter {
      animation: fadeIn @fadeInSpeed;
    }

    &.ng-leave {
      animation: fadeOut @fadeOutSpeed;
    }
  }
}

.snippetEdit {
  margin-bottom: 15px;
  border-bottom: 1px @gray-lighter solid;

  &:last-child {
    border: none;
  }

  &.ng-enter {
    animation: fadeIn @fadeInSpeed;
  }

  &.ng-leave {
    animation: fadeOut @fadeOutSpeed;
  }
}

.snippetContent {
  &.ng-enter {
    animation: fadeIn @fadeInSpeed;
  }

  &.ng-leave {
    animation: fadeOut @fadeOutSpeed;
  }
}

.letterListItem {
  margin-bottom: 10px;

  .letterListItemTitle {
    &:hover {
      background-color: @border-color;
    }
  }
}

.navbar {
  // Fallback for old browsers
  background: #000;
  background: rgba(0,0,0,0.8);
  border: 0;
}

#auth-form {
  .form-group {
    .form-sub {
      text-align: center;
      margin-top: 10px;
    }
  }

  .auth-error {
    margin-top: 10px;
    border-top: 1px solid @border-color;
    padding-top: 10px;
    margin-bottom: -5px;
  }

  #social-auth {
    margin-top: 15px;
    border-top: 1px solid @border-color;
    padding-top: 10px;
    text-align: center;

    ul {
      margin: 10px 0 0 0;
      padding: 0;
      list-style: none;

      li {
        display: inline;
        margin: 10px;
      }
    }
  }
}

#welcome {
  position: relative;

  min-height: calc(~"100vh - 50px");
  background-size: cover;

  box-shadow: 0px 1px 250px 0px @gray inset;

  .by-line {
    position: absolute;
    margin: 20px;
    bottom: 0;
    left: 0;
    right: 0;
  }
}

#site-content {
  padding-top: 50px;
}

#home-content {
  padding: 20px 0;
}

.fa-inactive {
  li.active & {
    display: none;
  }
}

.fa-active {
  display: none;

  li.active & {
    display: inline-block;
  }
}

.no-margin {
  margin: 0;
}

.modal-backdrop {
  // tmp backdrop fix: https://github.com/angular-ui/bootstrap/issues/2970
  bottom: 0;
  position: fixed;
}

// angular-drag-and-drop-lists
ul[dnd-list], ul[dnd-list] > li {
  position: relative;
}

